--- a/app/src/main/res/layout/fragment_lanzar_dados.xml
+++ b/app/src/main/res/layout/fragment_lanzar_dados.xml
@@ -52,11 +52,39 @@
             android:text="@string/lanzar" />
 
         <ImageView
+            android:id="@+id/LanzarDados_1d6_foto"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_below="@+id/LanzarDados_titulo"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="60dp"
+            android:contentDescription="@string/unodseis"
+            android:src="@drawable/placeholder_1d6" />
+
+        <TextView
+            android:id="@+id/LanzarDados_texto_1d6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/LanzarDados_1d6_foto"
+            android:layout_marginStart="160dp"
+            android:text="@string/unodseis"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/LanzarDados_lanzar_1d6_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/LanzarDados_texto_1d6"
+            android:layout_marginStart="130dp"
+            android:text="@string/lanzar" />
+
+        <ImageView
             android:id="@+id/LanzarDados_1d8_foto"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_below="@+id/LanzarDados_titulo"
-            android:layout_centerInParent="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="50dp"
             android:contentDescription="@string/unodocho"
             android:src="@drawable/placeholder_1d8" />
@@ -65,8 +93,9 @@
             android:id="@+id/LanzarDados_texto_1d8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/LanzarDados_1d4_foto"
-            android:layout_marginStart="160dp"
+            android:layout_below="@+id/LanzarDados_1d8_foto"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="25dp"
             android:text="@string/unodocho"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
@@ -75,17 +104,18 @@
             android:id="@+id/LanzarDados_lanzar_1d8_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/LanzarDados_texto_1d4"
-            android:layout_marginStart="130dp"
+            android:layout_below="@id/LanzarDados_texto_1d8"
+            android:layout_alignParentEnd="true"
             android:text="@string/lanzar" />
 
         <ImageView
             android:id="@+id/LanzarDados_1d10_foto"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_below="@+id/LanzarDados_titulo"
-            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/LanzarDados_lanzar_1d4_btn"
+            android:layout_alignParentStart="true"
             android:layout_marginTop="50dp"
+            android:layout_marginStart="5dp"
             android:contentDescription="@string/unoddiez"
             android:src="@drawable/placeholder_1d10" />
 
@@ -93,9 +123,9 @@
             android:id="@+id/LanzarDados_texto_1d10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/LanzarDados_1d4_foto"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="25dp"
+            android:layout_below="@+id/LanzarDados_1d10_foto"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="28dp"
             android:text="@string/unoddiez"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
@@ -104,17 +134,17 @@
             android:id="@+id/LanzarDados_lanzar_1d10_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/LanzarDados_texto_1d4"
-            android:layout_alignParentEnd="true"
+            android:layout_below="@id/LanzarDados_texto_1d10"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="3dp"
             android:text="@string/lanzar" />
 
         <ImageView
             android:id="@+id/LanzarDados_1d12_foto"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_below="@+id/LanzarDados_lanzar_1d4_btn"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="70dp"
+            android:layout_below="@+id/LanzarDados_lanzar_1d6_btn"
+            android:layout_centerInParent="true"
             android:layout_marginTop="50dp"
             android:contentDescription="@string/unoddoce"
             android:src="@drawable/placeholder_1d12" />
@@ -124,9 +154,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/LanzarDados_1d12_foto"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="95dp"
-            android:text="@string/unoddiez"
+            android:layout_marginStart="160dp"
+            android:text="@string/unoddoce"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
 
@@ -135,8 +164,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/LanzarDados_texto_1d12"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="70dp"
+            android:layout_marginStart="130dp"
             android:text="@string/lanzar" />
 
         <ImageView
@@ -145,7 +173,6 @@
             android:layout_height="100dp"
             android:layout_below="@+id/LanzarDados_lanzar_1d4_btn"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="60dp"
             android:layout_marginTop="50dp"
             android:contentDescription="@string/unodveinte"
             android:src="@drawable/placeholder_1d20" />
@@ -156,7 +183,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/LanzarDados_1d12_foto"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="85dp"
+            android:layout_marginEnd="30dp"
             android:text="@string/unodveinte"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
@@ -167,7 +194,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/LanzarDados_texto_1d12"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="55dp"
             android:text="@string/lanzar" />
 
         <ImageView
